--- a/index.html
+++ b/index.html
@@ -9,25 +9,19 @@
 <body>
     <input type="text" id="pantalla" disabled>
 <div class="numeros">
-    <button onclick="appendToDisplay('1')">1</button>
-    <button onclick="appendToDisplay('2')">2</button>
-    <button onclick="appendToDisplay('3')">3</button>
-    <button onclick="appendToDisplay('4')">4</button>
-    <button onclick="appendToDisplay('5')">5</button>
-    <button onclick="appendToDisplay('6')">6</button>
-    <button onclick="appendToDisplay('7')">7</button>
-    <button onclick="appendToDisplay('8')">8</button>
-    <button onclick="appendToDisplay('9')">9</button>
-    <button onclick="appendToDisplay('0')">0</button>
-    <button onclick="appendToDisplay('-')">-</button>
-    <button onclick="appendToDisplay('+')">+</button>
-    <button onclick="appendToDisplay('*')">*</button>
-    <button onclick="appendToDisplay('/')">/</button>
-    <button onclick="clearDisplay()">C</button>
-    <button onclick="calculateResult()">=</button>
-    <button onclick="appendToDisplay('/')">
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>0</button>
+    <button>-</button>
+    <button>+</button>
 </div>
-   
     <script src="js.js"></script>
 </body>
 </html>
