se agrega funcion de dijitar numeros

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" id="pantalla" disabled>
+    <input type="text" id="pantalla" >
 <div class="numeros">
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>0</button>
-    <button>-</button>
-    <button>+</button>
+    <button onclick="dijitarNumero('1')">1</button>
+    <button onclick="dijitarNumero('2')">2</button>
+    <button onclick="dijitarNumero('3')">3</button>
+    <button onclick="dijitarNumero('4')">4</button>
+    <button onclick="dijitarNumero('5')">5</button>
+    <button onclick="dijitarNumero('6')">6</button>
+    <button onclick="dijitarNumero('7')">7</button>
+    <button onclick="dijitarNumero('8')">8</button>
+    <button onclick="dijitarNumero('9')">9</button>
+    <button onclick="dijitarNumero('0')">0</button>
+    <button onclick="dijitarNumero('-')">-</button>
+    <button onclick="dijitarNumero('+')">+</button>
 </div>
     <script src="js.js"></script>
 </body>
