--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <button onclick="dijitarNumero('0')">0</button>
     <button onclick="dijitarNumero('-')">-</button>
     <button onclick="dijitarNumero('+')">+</button>
+    <button>00</button>
+    <button onclick="borrar()">borrar</button>
+    <button>=</button>
 </div>
     <script src="js.js"></script>
 </body>
