se agrega funcion para realizar la operacion dijitada

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <button onclick="dijitarNumero('0')">0</button>
     <button onclick="dijitarNumero('-')">-</button>
     <button onclick="dijitarNumero('+')">+</button>
-    <button>00</button>
+    <button onclick="dijitarNumero('00')">00</button>
     <button onclick="borrar()">borrar</button>
-    <button>=</button>
+    <button onclick="calcularResultado()">=</button>
 </div>
     <script src="js.js"></script>
 </body>
