se modicica el tamaño de la interfaz

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Calcularodra de Raul</h1>
     <input type="text" id="pantalla" >
 <div class="numeros">
     <button onclick="dijitarNumero('1')">1</button>
