se agrega un selec pra opciones de temas

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Grechen+Fuemen&family=Tiny5&display=swap');
+        </style>
 </head>
 <body>
-    <h1>Calcularodra de Raul</h1>
+    <select name="opciones" id="" placeholder="opciones">
+        
+        <option value="">tema</option>
+        <option value="">teclado</option>
+        <option value="">historial</option>
+    </select>
+    <button id="botonSelecionar">seleccionar</button>
+    <h1>CALCULADORA</h1>
     <input type="text" id="pantalla" >
 <div class="numeros">
     <button onclick="dijitarNumero('1')">1</button>
