mejora de responsive

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <select name="opciones" id="" placeholder="opciones">
         
         <option value="">tema</option>
-        <option value="">teclado</option>
-        <option value="">historial</option>
+        <option value="">claro</option>
+        <option value="">oscuro</option>
     </select>
-    <button id="botonSelecionar">seleccionar</button>
+    <button id="botonSelecionar" class="selec">seleccionar</button>
     <h1>CALCULADORA</h1>
     <input type="text" id="pantalla" >
 <div class="numeros">
