--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
     <button onclick="dijitarNumero('8')">8</button>
     <button onclick="dijitarNumero('9')">9</button>
     <button onclick="dijitarNumero('0')">0</button>
+    <button onclick="dijitarNumero('00')">00</button>
+    <button onclick="dijitarNumero()">c</button>
     <button onclick="dijitarNumero('-')">-</button>
     <button onclick="dijitarNumero('+')">+</button>
-    <button onclick="dijitarNumero('00')">00</button>
+    <button onclick="dijitarNumero('*')">*</button>
+    <button onclick="dijitarNumero('/')">/</button>
     <button onclick="borrar()">borrar</button>
     <button onclick="calcularResultado()">=</button>
 </div>
