tamaño de fuentes

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <button onclick="dijitarNumero('0')">0</button>
     <button onclick="dijitarNumero('00')">00</button>
     <button onclick="dijitarNumero()">c</button>
-    <button onclick="dijitarNumero('-')">-<br>Restar</button>
-    <button onclick="dijitarNumero('+')">+ <br>Sumar</button>
-    <button onclick="dijitarNumero('*')">*<br>Multiplicar</button>
-    <button onclick="dijitarNumero('/')">/ <br>Dividir</button>
+    <button onclick="dijitarNumero('-')">-</button>
+    <button onclick="dijitarNumero('+')">+</button>
+    <button onclick="dijitarNumero('*')">x</button>
+    <button onclick="dijitarNumero('/')">/</button>
     <button onclick="borrar()">borrar</button>
     <button onclick="calcularResultado()">=</button>
 </div>
