--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button onclick="dijitarNumero('9')">9</button>
     <button onclick="dijitarNumero('0')">0</button>
     <button onclick="dijitarNumero('00')">00</button>
-    <button onclick="dijitarNumero()">c</button>
+    <button onclick="dijitarNumero('c')">c</button>
     <button onclick="dijitarNumero('-')">-</button>
     <button onclick="dijitarNumero('+')">+</button>
     <button onclick="dijitarNumero('*')">x</button>
