add funcion borrar

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <button onclick="dijitarNumero('9')">9</button>
     <button onclick="dijitarNumero('0')">0</button>
     <button onclick="dijitarNumero('00')">00</button>
-    <button onclick="dijitarNumero('c')">c</button>
+    <button onclick="borrar()">c</button>
     <button onclick="dijitarNumero('-')">-</button>
     <button onclick="dijitarNumero('+')">+</button>
     <button onclick="dijitarNumero('*')">x</button>
     <button onclick="dijitarNumero('/')">/</button>
-    <button onclick="borrar()">borrar</button>
+    <button onclick="capturarUtimoNumeor()">borrar</button>
     <button onclick="calcularResultado()">=</button>
 </div>
     <script src="js.js"></script>
